cli/tests/059_fs_relative_path_perm.ts.out
[WILDCARD]error: Uncaught PermissionDenied: Access to read "non-existent", run again with read permission
    throw new ErrorClass(res.err.message);
          ^
    at [WILDCARD]
